--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,29 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="01-gallery.html">Image gallery</a></li>
-      <li><a href="02-video.html">Video playback</a></li>
-      <li><a href="03-feedback.html">Feedback form</a></li>
-    </ul>
+    <div class="month">
+     <h2 class="month-trend-title">UPCOMING THIS MONTH</h2>
+       <div class="upcom-js-list">
+         <!--<img src="" alt="" class="upcom-img" /> 
+        <h3 class="upcom-movie-title"></h3>
+        <div class="upcom-about-box">
+          <p class="upcom-movie-subtitle">Release date</p>
+          <p class="upcom-movie-subtitle">Vote / Votes</p>
+          <p class="upcom-movie-subtitle">Popularity</p>
+          <p class="upcom-movie-subtitle">Genre</p>
+        </div>
+        <div>
+          <p class="upcom-release-date"></p>
+          <p class="upcom-vote"></p>
+          <p class="upcom-popularity"></p>
+          <p class="upcom-genre"></p>
+        </div>
+        <p class="upcom-movie-subtitle">About</p>
+        <p class="upcom-movie-about"></p>
+      </div>
+      <button class="upcom-btn">Add to my library</button>
+    </div>-->
+       </div>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
